@@ -24,7 +24,8 @@ dependencies {
                    'com.google.dagger:dagger:2.+',
                    'com.fasterxml.jackson.core:jackson-databind:2.+',
                    'commons-cli:commons-cli:1.+',
-                   'commons-io:commons-io:2.+'
+                   'commons-io:commons-io:2.+',
+                   'org.apache.commons:commons-text:1.+'
 
     annotationProcessor 'com.google.dagger:dagger-compiler:2.+'
 }
